Resolves article title overflow bug in ArticleCard

--- a/src/styling/ArticleCard.css
+++ b/src/styling/ArticleCard.css
@@ -24,7 +24,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  height: 5rem;
+  height: 5.2rem;
   margin-top: auto;
   font-weight: 500;
   padding: 1rem;
